@@ -1,6 +1,5 @@
 package io.github.jbellis.brokk.git;
 
-import com.google.common.base.Splitter;
 import dev.langchain4j.agent.tool.P;
 import dev.langchain4j.agent.tool.Tool;
 import dev.langchain4j.agent.tool.ToolContext;
@@ -13,22 +12,25 @@ import io.github.jbellis.brokk.IContextManager;
 import io.github.jbellis.brokk.Llm;
 import io.github.jbellis.brokk.Service;
 import io.github.jbellis.brokk.analyzer.ProjectFile;
+import io.github.jbellis.brokk.exception.LlmException;
 import io.github.jbellis.brokk.prompts.CommitPrompts;
 import io.github.jbellis.brokk.prompts.MergePrompts;
 import io.github.jbellis.brokk.prompts.SummarizerPrompts;
 import io.github.jbellis.brokk.util.Messages;
 import java.net.URI;
-import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.eclipse.jgit.api.errors.GitAPIException;
 import org.eclipse.jgit.lib.Constants;
+import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
+/** Code that uses LLMs to interact with Git goes here, instead of GitRepo. */
 public final class GitWorkflow {
     private static final Logger logger = LogManager.getLogger(GitWorkflow.class);
     private static final int EXPLAIN_COMMIT_FILE_LIMIT = 50;
@@ -41,7 +43,7 @@ public final class GitWorkflow {
 
     public record PrSuggestion(String title, String description, boolean usedCommitMessages) {}
 
-    private final IContextManager contextManager;
+    private final IContextManager cm;
     private final GitRepo repo;
 
     // Fields for tool calling results
@@ -52,37 +54,16 @@ public final class GitWorkflow {
     private String prDescription;
 
     public GitWorkflow(IContextManager contextManager) {
-        this.contextManager = contextManager;
+        this.cm = contextManager;
         this.repo = (GitRepo) contextManager.getProject().getRepo();
     }
 
-    /**
-     * Synchronously commit the given files. If {@code files} is empty, commit all modified files. If {@code rawMessage}
-     * is null/blank, a suggestion will be generated (may still be blank). Comment lines (# …) are removed.
-     */
-    public CommitResult commit(List<ProjectFile> files, @Nullable String rawMessage) throws GitAPIException {
-        var filesToCommit = files.isEmpty()
-                ? repo.getModifiedFiles().stream()
-                        .map(GitRepo.ModifiedFile::file)
-                        .toList()
-                : files;
+    /** Synchronously commit the given files. If {@code files} is empty, commit all modified files. */
+    public CommitResult commit(List<ProjectFile> files, String msg) throws GitAPIException {
+        assert !files.isEmpty();
+        assert !msg.isBlank();
 
-        if (filesToCommit.isEmpty()) {
-            throw new IllegalStateException("No files to commit.");
-        }
-
-        String msg = normaliseMessage(rawMessage);
-        if (msg.isBlank()) {
-            // suggestCommitMessage can throw RuntimeException if diffing fails
-            // or InterruptedException occurs. Let it propagate.
-            msg = suggestCommitMessage(filesToCommit);
-        }
-
-        if (msg.isBlank()) {
-            throw new IllegalStateException("No commit message available after attempting suggestion.");
-        }
-
-        String sha = repo.commitFiles(filesToCommit, msg);
+        String sha = repo.commitFiles(files, msg);
         var first = msg.contains("\n") ? msg.substring(0, msg.indexOf('\n')) : msg;
         return new CommitResult(sha, first);
     }
@@ -91,7 +72,7 @@ public final class GitWorkflow {
      * Background helper that returns a suggestion or empty string. The caller decides on threading; no Swing here. Can
      * throw RuntimeException if diffing fails or InterruptedException occurs.
      */
-    public String suggestCommitMessage(List<ProjectFile> files) {
+    public String suggestCommitMessage(List<ProjectFile> files, String taskDescription) throws InterruptedException {
         logger.debug("Suggesting commit message for {} files", files.size());
 
         String diff;
@@ -103,27 +84,15 @@ public final class GitWorkflow {
         }
 
         if (diff.isBlank()) {
-            logger.debug("Empty diff - no commit message to suggest");
-            return "";
+            throw new IllegalStateException("No modifications present in %s".formatted(files));
         }
 
-        var messages = CommitPrompts.instance.collectMessages(contextManager.getProject(), diff);
-        if (messages.isEmpty()) {
-            logger.debug("No commit message generated - diff preprocessing returned empty result");
-            return "";
-        }
-
+        var messages = CommitPrompts.instance.collectMessages(cm.getProject(), diff);
         Llm.StreamingResult result;
-        try {
-            result = contextManager
-                    .getLlm(contextManager.getService().quickestModel(), "Infer commit message")
-                    .sendRequest(messages);
-        } catch (InterruptedException ie) {
-            Thread.currentThread().interrupt();
-            throw new RuntimeException("Commit message suggestion was interrupted", ie);
-        }
+        result = cm.getLlm(cm.getService().quickestModel(), "Infer commit message")
+                .sendRequest(messages);
 
-        return result.error() == null ? result.text() : "";
+        return result.error() == null ? result.text() : taskDescription;
     }
 
     public PushPullState evaluatePushPull(String branch) throws GitAPIException {
@@ -131,7 +100,8 @@ public final class GitWorkflow {
             return new PushPullState(false, false, false, Set.of());
         }
         boolean hasUpstream = repo.hasUpstreamBranch(branch);
-        Set<String> unpushedCommitIds = hasUpstream ? repo.getUnpushedCommitIds(branch) : new HashSet<>();
+        Set<String> unpushedCommitIds;
+        unpushedCommitIds = hasUpstream ? repo.remote().getUnpushedCommitIds(branch) : new HashSet<String>();
         boolean canPull = hasUpstream;
         boolean canPush = hasUpstream
                 && !unpushedCommitIds.isEmpty(); // Can only push if there's an upstream and unpushed commits
@@ -152,7 +122,7 @@ public final class GitWorkflow {
         }
 
         if (repo.hasUpstreamBranch(branch)) {
-            repo.push(branch);
+            repo.remote().push(branch);
             return "Pushed " + branch;
         } else {
             // Check if there are any commits to push before setting upstream.
@@ -162,7 +132,7 @@ public final class GitWorkflow {
             if (repo.listCommitsDetailed(branch).isEmpty()) {
                 return "Branch " + branch + " is empty. Nothing to push.";
             }
-            repo.pushAndSetRemoteTracking(branch, "origin");
+            repo.remote().pushAndSetRemoteTracking(branch, "origin");
             return "Pushed " + branch + " and set upstream to origin/" + branch;
         }
     }
@@ -178,7 +148,8 @@ public final class GitWorkflow {
         if (!repo.hasUpstreamBranch(branch)) {
             throw new GitOperationException("Branch '" + branch + "' has no upstream branch configured for pull.");
         }
-        repo.pull(); // Assumes pull on current branch is intended if branchName matches
+        // Assumes pull on current branch is intended if branchName matches
+        repo.remote().pull();
         return "Pulled " + branch;
     }
 
@@ -189,6 +160,7 @@ public final class GitWorkflow {
         return new BranchDiff(commits, files, merge);
     }
 
+    @SuppressWarnings("unused")
     @Tool("Suggest pull request title and description based on the changes")
     public void suggestPrDetails(
             @P("Brief PR title (12 words or fewer)") String title,
@@ -213,7 +185,7 @@ public final class GitWorkflow {
         var mergeBase = repo.getMergeBase(source, target);
         String diff = (mergeBase != null) ? repo.showDiff(source, mergeBase) : "";
 
-        var service = contextManager.getService();
+        var service = cm.getService();
         var preferredModel = service.getModel(Service.GPT_5_MINI);
         var modelToUse = preferredModel != null ? preferredModel : service.quickestModel(); // Fallback
 
@@ -225,12 +197,14 @@ public final class GitWorkflow {
             messages = SummarizerPrompts.instance.collectPrTitleAndDescriptionMessages(diff);
         }
 
-        var toolSpecs = contextManager.getToolRegistry().getTools(this, List.of("suggestPrDetails"));
+        var toolSpecs = cm.getToolRegistry().getTools(this, List.of("suggestPrDetails"));
         var toolContext = new ToolContext(toolSpecs, ToolChoice.REQUIRED, this);
 
-        var llm = contextManager.getLlm(modelToUse, "PR-description", true);
+        var llm = cm.getLlm(new Llm.Options(modelToUse, "PR-description")
+                .withPartialResponses()
+                .withEcho());
         llm.setOutput(streamingOutput);
-        var result = llm.sendRequest(messages, toolContext, true);
+        var result = llm.sendRequest(messages, toolContext);
 
         if (result.error() != null) {
             throw new RuntimeException("LLM error while generating PR details", result.error());
@@ -240,7 +214,7 @@ public final class GitWorkflow {
             throw new RuntimeException("LLM did not call the suggestPrDetails tool");
         }
 
-        contextManager.getToolRegistry().executeTool(this, result.toolRequests().get(0));
+        cm.getToolRegistry().executeTool(this, result.toolRequests().getFirst());
 
         String title = prTitle;
         String description = prDescription;
@@ -255,7 +229,7 @@ public final class GitWorkflow {
     /** Pushes branch if needed and opens a PR. Returns the PR url. */
     public URI createPullRequest(String source, String target, String title, String body) throws Exception {
         // 1. Ensure branch is pushed
-        if (repo.branchNeedsPush(source)) {
+        if (repo.remote().branchNeedsPush(source)) {
             push(source);
         }
 
@@ -264,19 +238,11 @@ public final class GitWorkflow {
         String base = target.replaceFirst("^origin/", "");
 
         // 3. GitHub call
-        var auth = GitHubAuth.getOrCreateInstance(contextManager.getProject());
+        var auth = GitHubAuth.getOrCreateInstance(cm.getProject());
         var ghRepo = auth.getGhRepository();
         var pr = ghRepo.createPullRequest(title, head, base, body);
 
         return pr.getHtmlUrl().toURI();
-    }
-
-    private static String normaliseMessage(@Nullable String raw) {
-        if (raw == null) return "";
-        return Arrays.stream(raw.split("\n"))
-                .filter(l -> !l.trim().startsWith("#"))
-                .collect(Collectors.joining("\n"))
-                .trim();
     }
 
     public static boolean isSyntheticBranchName(String branchName) {
@@ -288,11 +254,55 @@ public final class GitWorkflow {
         var parentRev = rev + "^";
         try {
             // If parent cannot be resolved (e.g., rev is a root commit), fall back to the empty tree.
-            repo.resolve(parentRev);
+            repo.resolveToObject(parentRev);
             return parentRev;
         } catch (GitAPIException e) {
             return Constants.EMPTY_TREE_ID.getName();
         }
+    }
+
+    /**
+     * Auto-commit any modified files with a message that incorporates the task description.
+     *
+     * <p>This was previously implemented inside ContextManager. It has been moved into GitWorkflow so that all Git
+     * operations (diffing/committing/suggesting messages) live in the Git domain class.
+     *
+     * <p>Behavior: - If modified files cannot be determined, show a tool error and return. - If no modified files, show
+     * an informational notification. - Otherwise, suggest a commit message (falls back to taskDescription) and commit
+     * the files. - On success, show a friendly notification and update the commit panel; on failure, show a tool error.
+     */
+    public Optional<CommitResult> performAutoCommit(String taskDescription) throws InterruptedException {
+        try {
+            return performAutoCommitInternal(taskDescription);
+        } catch (GitAPIException e) {
+            cm.getIo().showNotification(IConsoleIO.NotificationRole.ERROR, "Auto-commit failed: " + e.getMessage());
+            return Optional.empty();
+        }
+    }
+
+    private @NotNull Optional<CommitResult> performAutoCommitInternal(String taskDescription)
+            throws GitAPIException, InterruptedException {
+        var io = cm.getIo();
+        Set<GitRepo.ModifiedFile> modified;
+        modified = repo.getModifiedFiles();
+
+        if (modified.isEmpty()) {
+            io.showNotification(IConsoleIO.NotificationRole.INFO, "No changes to commit for task: " + taskDescription);
+            return Optional.empty();
+        }
+
+        var filesToCommit = modified.stream().map(GitRepo.ModifiedFile::file).collect(Collectors.toList());
+
+        String message = suggestCommitMessage(filesToCommit, taskDescription);
+
+        var commitResult = commit(filesToCommit, message);
+
+        // Friendly notification: include short hash.
+        io.showNotification(
+                IConsoleIO.NotificationRole.INFO,
+                "Committed " + repo.shortHash(commitResult.commitId()) + ": " + commitResult.firstLine());
+        io.updateCommitPanel();
+        return Optional.of(commitResult);
     }
 
     /**
@@ -303,18 +313,11 @@ public final class GitWorkflow {
      * @param revision The commit id (or any rev resolvable to a single commit).
      * @return Markdown-formatted explanation text from the LLM (may be empty if an error occurs).
      */
-    public String explainCommit(StreamingChatModel model, String revision) {
-        if (revision.isBlank()) {
-            throw new IllegalArgumentException("revision must be non-blank");
-        }
+    public String explainCommit(StreamingChatModel model, String revision)
+            throws GitAPIException, InterruptedException {
+        assert !revision.isBlank();
 
-        String diff;
-        try {
-            // Always explain a single commit relative to its parent (or empty tree)
-            diff = repo.showDiff(revision, parentOrEmptyTree(revision));
-        } catch (GitAPIException e) {
-            throw new RuntimeException("Failed to produce diff for commit " + revision, e);
-        }
+        String diff = repo.showDiff(revision, parentOrEmptyTree(revision));
 
         var preprocessedDiff = Messages.getApproximateTokens(diff) > 100_000
                 ? CommitPrompts.instance.preprocessUnifiedDiff(diff, EXPLAIN_COMMIT_FILE_LIMIT)
@@ -324,72 +327,14 @@ public final class GitWorkflow {
         }
         var messages = MergePrompts.instance.collectMessages(preprocessedDiff, revision, revision);
 
-        try {
-            var shortId = repo.shortHash(revision);
-            var llm = contextManager.getLlm(model, "Explain commit %s".formatted(shortId));
-            Llm.StreamingResult response = llm.sendRequest(messages);
+        var shortId = repo.shortHash(revision);
+        var llm = cm.getLlm(model, "Explain commit %s".formatted(shortId));
+        Llm.StreamingResult response = llm.sendRequest(messages);
 
-            if (response.error() != null) {
-                logger.warn("LLM returned an error while explaining {}: {}", revision, response.error());
-
-                // 1) Obtain the full commit message if possible
-                var commitMessage = "";
-                try {
-                    var commits = repo.listCommitsDetailed(revision);
-                    commitMessage = commits.isEmpty() ? "" : commits.getFirst().message();
-                } catch (Exception e) {
-                    logger.debug("Could not retrieve commit message for {}", revision, e);
-                }
-
-                // 2) Extract file list + statuses from the unified diff
-                var entries = parseFileStatuses(diff);
-                var filesText = entries.isEmpty() ? "(no files detected in diff)" : String.join("\n", entries);
-
-                // 3) Compose fallback output
-                var header = commitMessage.isBlank() ? "Commit %s".formatted(revision) : commitMessage.trim();
-
-                return """
-                       %s
-
-                       Modified files:
-                       %s
-                       """
-                        .formatted(header, filesText)
-                        .trim();
-            }
-
-            return response.text().trim();
-        } catch (InterruptedException ie) {
-            Thread.currentThread().interrupt();
-            throw new RuntimeException("Commit explanation was interrupted", ie);
+        if (response.error() != null) {
+            throw new LlmException("LLM error while explaining commit %s".formatted(shortId), response.error());
         }
-    }
 
-    private static List<String> parseFileStatuses(String diffText) {
-        var entries = new java.util.ArrayList<String>();
-        String currentFile = null;
-        String currentStatus = "M";
-        for (var line : Splitter.on('\n').split(diffText)) {
-            if (line.startsWith("diff --git ")) {
-                if (currentFile != null) {
-                    entries.add(currentStatus + " " + currentFile);
-                }
-                currentFile = null;
-                currentStatus = "M";
-                var parts = Splitter.on(' ').splitToList(line);
-                if (parts.size() >= 4) {
-                    var bpath = parts.get(3);
-                    currentFile = bpath.startsWith("b/") ? bpath.substring(2) : bpath;
-                }
-            } else if (line.startsWith("new file mode")) {
-                currentStatus = "A";
-            } else if (line.startsWith("deleted file mode")) {
-                currentStatus = "D";
-            }
-        }
-        if (currentFile != null) {
-            entries.add(currentStatus + " " + currentFile);
-        }
-        return List.copyOf(entries);
+        return response.text().trim();
     }
 }
